// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Select renders correctly w/ init value 1`] = `
<div>
  <select
    class="
				outline-none
				focus:outline-none
				border-b
				px-3
				py-1
				bg-white
				rounded-sm
				flex
				items-center
				min-w-32
			"
  >
    <!--v-if-->
    
    <option
      value="0"
    >
      Test1
    </option>
    <option
      value="1"
    >
      Test2
    </option>
    
  </select>
</div>
`;

exports[`# Select renders correctly w/o init value 1`] = `
<div>
  <select
    class="
				outline-none
				focus:outline-none
				border-b
				px-3
				py-1
				bg-white
				rounded-sm
				flex
				items-center
				min-w-32
			"
  >
    <option
      disabled=""
    />
    
    <option
      value="0"
    >
      Test1
    </option>
    <option
      value="1"
    >
      Test2
    </option>
    
  </select>
</div>
`;
